--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
                     </li>
                     {% endif %}
                     
-                    {% if site.weibo_username %}
+                    {% if site.instagram_username %}
                     <li>
                         <a target="_blank" href="http://instagram.com/{{ site.weibo_username }}">
                             <span class="fa-stack fa-lg">
