--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -156,7 +156,7 @@ layout: default
                             </li>
                             {% endif %}
                             
-                            {% if site.weibo_username %}
+                            {% if site.instagram_username %}
                             <li>
                                 <a target="_blank" href="http://instagram.com/{{ site.weibo_username }}">
                                     <span class="fa-stack fa-lg">
