--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -44,7 +44,7 @@
         img{
             width: 80%;
             display: block;
-            border-radius: 5px;
+            border-radius: 50%;
             margin-bottom: 20px;
         }
         p{
