--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -154,6 +154,17 @@ layout: default
                             </li>
                             {% endif %}
                             
+                            {% if site.linkedin_username %}
+                            <li>
+                                <a target="_blank" href="http://linkedin.com/in/{{ site.weibo_username }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
+                            
                             {% if site.github_username %}
                             <li>
                                 <a target="_blank" href="https://github.com/{{ site.github_username }}">
