--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
                     
                     {% if site.instagram_username %}
                     <li>
-                        <a target="_blank" href="http://instagram.com/{{ site.weibo_username }}">
+                        <a target="_blank" href="http://instagram.com/{{ site.instagram_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -50,7 +50,7 @@
                     
                     {% if site.linkedin_username %}
                     <li>
-                        <a target="_blank" href="http://linkedin.com/in/{{ site.weibo_username }}">
+                        <a target="_blank" href="http://linkedin.com/in/{{ site.linkedin_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
