--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -145,7 +145,6 @@
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
 <script>
-    // dynamic User by Hux
     var _gaId = '{{ site.ga_track_id }}';
     var _gaDomain = '{{ site.ga_domain }}';
 
@@ -159,7 +158,6 @@
     ga('send', 'pageview');
 </script>
 {% endif %}
-
 
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
@@ -177,3 +175,4 @@
     })();
 </script>
 {% endif %}
+<script>
