--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,7 +71,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    If you have any questions or find any mistakes, please feel free to <a href="mailto:jxzhuge12@gmail.com">contact me</a>.
                 </p>
             </div>
         </div>
