--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,7 +105,7 @@ layout: default
             {% endif %}
         </div>
         <div class="shareto">
-        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
         <a href="https://twitter.com/share" class="twitter-share-button" data-via="jxzhuge12">Tweet</a> 
         </div>
     </div>
