--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,8 +64,10 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
-
-
+                <div class="shareto" align="center">
+                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-via="jxzhuge12">Tweet</a> 
+                </div>
             </div>
             {% if site.sidebar == true %}
     <!-- Sidebar Container -->
