--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,8 +64,8 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
-                <div class="shareto" align="right">
-                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
+                <div class="shareto" align="right" margin="auto" text-align="center">
+                <div class="fb-like" data-href="{{ site.baseurl | page.url }}" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
                 <div><a href="https://twitter.com/share" class="twitter-share-button" data-via="jxzhuge12">Tweet</a></div>
                 </div>
             </div>
