--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,10 @@ layout: default
 <!-- Image to hack wechat -->
 <!-- <img src="/img/icon_wechat.png" width="0" height="0"> -->
 <!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"> -->
-
+<!-- Latex Support -->
+{% if page.latex == "true" %}
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+{% endif %}
 <!-- Post Header -->
 <style type="text/css">
     header.intro-header{
