--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -151,12 +151,17 @@ pre code {
 .post-container a:focus {
   color: #0085a1;
 }
+.post-container p {
+  font-family: Georgia, serif;
+  text-align: justify;
+}
 .post-container h1,
 .post-container h2,
 .post-container h3,
 .post-container h4,
 .post-container h5,
 .post-container h6 {
+  font-family: Georgia, serif;
   margin: 30px 0 10px;
 }
 .post-container h5 {
