--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -165,19 +165,25 @@ pre code {
   margin: 30px 0 10px;
 }
 .post-container h5 {
+  font-family: Georgia, serif;
   font-size: 19px;
   font-weight: 600;
   color: gray;
 }
 .post-container h5 + p {
+  font-family: Georgia, serif;
+  text-align: justify;
   margin-top: 5px;
 }
 .post-container h6 {
+  font-family: Georgia, serif;
   font-size: 16px;
   font-weight: 600;
   color: gray;
 }
 .post-container h6 + p {
+  font-family: Georgia, serif;
+  text-align: justify;
   margin-top: 5px;
 }
 .post-container ul,
@@ -203,6 +209,8 @@ pre code {
   margin-bottom: 5px;
 }
 .post-container li p {
+  font-family: Georgia, serif;
+  text-align: justify;
   margin: 0;
   margin-bottom: 5px;
 }
@@ -212,6 +220,7 @@ pre code {
 .post-container li h4,
 .post-container li h5,
 .post-container li h6 {
+  font-family: Georgia, serif;
   line-height: 2;
   margin-top: 20px;
 }
