--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -188,6 +188,8 @@ pre code {
 }
 .post-container ul,
 .post-container ol {
+  font-family: Georgia, serif;
+  text-align: justify;
   margin-bottom: 40px;
 }
 @media screen and (max-width: 768px) {
