--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -162,10 +162,12 @@ pre code {
 .post-container h5,
 .post-container h6 {
   font-family: Georgia, serif;
+  text-align: justify;
   margin: 30px 0 10px;
 }
 .post-container h5 {
   font-family: Georgia, serif;
+  text-align: justify;
   font-size: 19px;
   font-weight: 600;
   color: gray;
@@ -177,6 +179,7 @@ pre code {
 }
 .post-container h6 {
   font-family: Georgia, serif;
+  text-align: justify;
   font-size: 16px;
   font-weight: 600;
   color: gray;
@@ -195,12 +198,16 @@ pre code {
 @media screen and (max-width: 768px) {
   .post-container ul,
   .post-container ol {
+    font-family: Georgia, serif;
+    text-align: justify;
     padding-left: 30px;
   }
 }
 @media screen and (max-width: 500px) {
   .post-container ul,
   .post-container ol {
+    font-family: Georgia, serif;
+    text-align: justify;
     padding-left: 20px;
   }
 }
