--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,15 @@ layout: default
 
 <!-- Latex Support -->
 {% if page.latex == true %}
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      processEscapes: true
+    }
+  });
+</script>
+
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
