--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -880,11 +880,9 @@ body {
 }
 /* Hux Optimize UserExperience */
 .navbar-default .navbar-toggle:focus,
-.navbar-default .navbar-toggle:hover {
-  background-color: inherit;
-}
+.navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:active {
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: inherit;
 }
 /* Hux customize Style for navBar button */
 .navbar-default .navbar-toggle {
