--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                         <a target="_blank" href="https://www.snapchat.com/add/{{ site.snapchat_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-snapchat fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-snapchat-ghost fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
